tests/facebook_fbt_none/facebook_fbt_none.exp
Error: main.js:4
  4: (<fbt />: number); // Error: ReactElement ~> number
      ^^^^^^^ React element `fbt`
  4: (<fbt />: number); // Error: ReactElement ~> number
               ^^^^^^ number. This type is incompatible with
                                                                   v-
157: declare type React$Element<+ElementType: React$ElementType> = {|
158:   +type: ElementType,
159:   +props: React$ElementProps<ElementType>,
...:
162: |};
     -^ object type. See lib: <BUILTINS>/react.js:157


Found 1 error
